src/objects/n2de__Distribution_log_action__c.object
<CustomObject>
    <description>Distribution log actions</description>
    <fields>
        <fullName>n2de__Action_date__c</fullName>
        <label>Action date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_log__c</fullName>
        <label>Distribution log</label>
        <referenceTo>n2de__Distribution_log__c</referenceTo>
        <relationshipLabel>Distribution log actions</relationshipLabel>
        <relationshipName>Distribution_log_actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>n2de__Time_to_action_days__c</fullName>
        <label>Time to action days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Time_to_action_mins__c</fullName>
        <label>Time to action mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Distribution log action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution log actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>